Thu Jan 11 10:49:52 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/apps/osql 
	- fixed incorrect report when drivername is not a file

Tue Jan 09 22:44:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: fix option problem

Tue Jan  9 00:16:46 EST 2007	JK Lowden <jklowden@schemamania.org>
	* src/tds/net.c simpler tds_select, thanks Frediano

Sun Jan  7 10:45:23 EST 2007	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/ctutil.c works with tdserror()

Sun Jan  7 00:41:19 EST 2007	JK Lowden <jklowden@schemamania.org>
	* include/tds.h
	* src/dblib/dblib.c src/dblib/dbutil.c
	* src/tds/net.c src/tds/query.c
	* src/tds/token.c src/tds/util.c
	- implement new timeout strategy using tds_select() and 
	- calling the client library's error handler (via tdserror). 
	- db-lib no worse than before, others not yet tested. 

Fri Jan 05 14:08:53 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/token.c: new token
	* src/tds/util.c: optimize

Fri Jan  5 02:08:54 EST 2007	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/tds/net.c src/tds/util.c
	- begin new timeout strategy, not done.

Thu Jan  4 18:47:46 EST 2007	JK Lowden <jklowden@freetds.org>
	* doc/bsqldb.txt src/apps/bsqldb.c nicer headers
	* doc/osql.txt src/apps/osql allow ini location override

Tue Jan  2 15:42:09 EST 2007	JK Lowden <jklowden@schemamania.org>
	* include/dblib.h include/tds.h
	* src/apps/tsql.c
	* src/dblib/dblib.c src/dblib/dbutil.c
	* src/tds/iconv.c src/tds/login.c src/tds/net.c
	* src/tds/token.c src/tds/util.c
	- replace tds_client_msg with tdserror()

Mon Jan 01 12:56:50 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c src/tds/query.c:
	- remove some warning compiling with SUN compiler
	- Happy New Year

Fri Dec 29 20:43:55 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: remove warning and optimize

Fri Dec 29 20:42:41 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>